[package]
name = "akme"
version = "0.1.0"
edition = "2021"

[dependencies]
acme2 = "0.5.1"
anyhow = "1.0.77"
axum = "0.7.3"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
log = "0.4.20"
once_cell = "1.19.0"
openssl = { version = "0.10.62", features = ["vendored"] }
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
x509-certificate = "0.23.1"
x509-parser = "0.15.1"
